fix toggle button jumping on toggle
add transparent border by default to prevent layout shift when toggling

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -192,7 +192,7 @@ header {
 
     button {
       background: none;
-      border: none;
+      border: 1px solid transparent;
       cursor: pointer;
       padding: 0.75rem 1rem;
       &.active {
